# KurisuGalManager

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.html  main.js  main.jsx  styles.css  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: bangumi.rs  bangumi_test.rs  commands.rs  data_store.rs  error.rs  game_launcher.rs  lib.rs  logger.rs  main.rs  models.rs  path_manager.rs  settings.rs  utils.rs
src/components/: AboutPage.jsx  AddGameModal.jsx  BatchBar.jsx  CategoryManager.jsx  DetailModal.jsx  FloatToolbar.jsx  GameCard.jsx  GameGrid.jsx  GlobalLoader.jsx  HomePage.jsx  Icon.jsx  Modal.jsx  Pagination.jsx  Panel.jsx  RankingPage.jsx  SettingsModal.jsx  SettingsPage.jsx  Sidebar.jsx  Toast.jsx  Toolbar.jsx  WelcomePage.jsx
src/css/: animations.css  base.css  components.css  fonts.css  layout.css  responsive.css  themes.css  variables.css
src/hooks/: useAppVersion.js  useGameData.jsx
src/js/: utils.js
src/ranking-vue/: RankingApp.vue  bridge.js
