[package]
name = "galmanager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "galmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
winreg = "0.52"
auto-launch = "0.5"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
dirs = "5"
walkdir = "2"
rfd = "0.15"
base64 = "0.21"
image = "0.24"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
