[package]
name = "kurisugal"
version = "1.3.4"
description = "KurisuGal - A Galgame Manager Tauri App"
authors = ["CoolSomeBody"]
edition = "2021"

[lib]
name = "kurisugal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
auto-launch = "0.5"
chrono = "0.4"
anyhow = "1"
thiserror = "1"
walkdir = "2"
rfd = "0.15"
base64 = "0.21"
image = "0.25"
log = "0.4"
simple_logger = "4"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
tokio = { version = "1", features = ["time", "rt", "macros"] }
winapi = { version = "0.3", features = ["winuser", "wingdi", "winbase"] }
rodio = "0.17"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
incremental = false

[profile.dev]
opt-level = 1
lto = "off"
incremental = true
